unpackaged/objects/Device__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>DecommissioningDate__c  &gt; Today()  ||  ISBLANK( DecommissioningDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecommissioningDate__c</fullName>
        <label>Decommissioning Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Denomination__c</fullName>
        <label>Denomination</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICCID__c</fullName>
        <inlineHelpText>Integrated Circuit Card ID : unique identifier of the Sim card</inlineHelpText>
        <label>ICCID</label>
        <length>19</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IMEI1__c</fullName>
        <inlineHelpText>International Mobile Equipment Identity</inlineHelpText>
        <label>IMEI 1</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IMEI2__c</fullName>
        <inlineHelpText>International Mobile Equipment Identity</inlineHelpText>
        <label>IMEI 2</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_used__c</fullName>
        <label>Is used ?</label>
        <summaryFilterItems>
            <field>EmployeeDevice__c.In_use__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>EmployeeDevice__c.Device_assigned__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Line_number__c</fullName>
        <label>Line number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MaterialType__c</fullName>
        <label>Material Type</label>
        <picklist>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIM card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OtherType__c</fullName>
        <description>To fill for other device&apos;s type.</description>
        <inlineHelpText>To fill for other device&apos;s type.</inlineHelpText>
        <label>Other Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PUK_code__c</fullName>
        <inlineHelpText>PIN Unlock Key</inlineHelpText>
        <label>PUK code</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductReference__c</fullName>
        <label>Product Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseDate__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Broken</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>In stock</fullName>
                <color>#33CC00</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In use</fullName>
                <color>#33CCFF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
                <color>#999999</color>
            </picklistValues>
            <picklistValues>
                <fullName>Stolen</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Device</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MaterialType__c</columns>
        <columns>Brand__c</columns>
        <columns>Denomination__c</columns>
        <columns>SerialNumber__c</columns>
        <columns>PurchaseDate__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Device Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Devices</pluralLabel>
    <recordTypes>
        <fullName>Electronic_device</fullName>
        <active>true</active>
        <label>Electronic device</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sim_Card</fullName>
        <active>true</active>
        <label>Sim Card</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DeviceUseableOnlyByOneUser</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($User.BypassVR__c),
Is_used__c &gt;1)</errorConditionFormula>
        <errorMessage>This device is already used by another person.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OtherTypeFill</fullName>
        <active>true</active>
        <description>Fill the &quot;Other type&quot; field only if Material type equals Other.</description>
        <errorConditionFormula>AND(ISBLANK( OtherType__c ), ISPICKVAL( MaterialType__c ,&apos;Other&apos;), (NOT( $User.BypassVR__c )))</errorConditionFormula>
        <errorMessage>You have to specify the material type on &quot;Other type&quot;.</errorMessage>
    </validationRules>
</CustomObject>